--- a/SMS_Presentation/Views/Cliente/VerCardsCliente.cshtml
+++ b/SMS_Presentation/Views/Cliente/VerCardsCliente.cshtml
@@ -1,7 +1,217 @@
-﻿
+﻿@using Presentation.Extensions
+@using CrossCutting;
+@model EntitiesServices.Model.CLIENTE
 @{
-    ViewBag.Title = "VerCardsCliente";
+    Layout = "~/Views/Shared/_Layout_Admin.cshtml";
+}
+<div class="wrapper wrapper-content animated fadeInRight">
+    <div class="page-title"> 
+        <h3 class="title">Clientes</h3> 
+        <br />
+        <ol class="breadcrumb">
+            <li>
+                <a href="@Url.Action("CarregarBase", "BaseAdmin")">Dashboard</a>
+            </li>
+            <li>
+                <a href="@Url.Action("MontarTelaCliente", "Cliente")">Clientes</a>
+            </li>
+            <li class="active">
+                <strong>Clientes</strong>
+            </li>
+        </ol>
+        <br />
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-xs-12 ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>Filtros</h5>
+                    <div class="ibox-tools">
+                        <a class="collapse-link">
+                            <i class="fa fa-chevron-up"></i>
+                        </a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            <i class="fa fa-wrench"></i>
+                        </a>
+                        <ul class="dropdown-menu dropdown-user">
+                            <li>
+                                <a href="#">Config option 1</a>
+                            </li>
+                            <li>
+                                <a href="#">Config option 2</a>
+                            </li>
+                        </ul>
+                        <a class="close-link">
+                            <i class="fa fa-times"></i>
+                        </a>
+                    </div>
+                </div>           
+            
+                @using (Html.BeginForm("FiltrarCliente", "Cliente", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal" }))
+                {
+                    <div class="ibox-content">
+                            <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">
+                                <div class="col-lg-3 col-md-3 col-xs-12">
+                                    Categoria do Cliente
+                                    @Html.DropDownListFor(m => m.CACL_CD_ID, (SelectList)ViewBag.Tipos, "Selecionar", new { @class = "form-control" })                            
+                                </div>
+                                <div class="col-lg-3 col-md-3 col-xs-12">
+                                    Nome
+                                    @Html.TextBoxFor(m => m.CLIE_NM_NOME, new { @class = "form-control", autofocus = true })
+                                </div>
+                                <div class="col-lg-2 col-md-2 col-xs-12">
+                                    CPF
+                                    @Html.TextBoxFor(m => m.CLIE_NR_CPF, new { @class = "form-control", @id="cpf", autofocus = true })
+                                </div>
+                                <div class="col-lg-2 col-md-2 col-xs-12">
+                                    CNPJ
+                                    @Html.TextBoxFor(m => m.CLIE_NR_CNPJ, new { @class = "form-control", @id="cnpj", autofocus = true })
+                                </div>
+                            </div>
+                            <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">
+                                <div class="col-lg-4 col-md-4 col-xs-12">
+                                    E-Mail
+                                    @Html.TextBoxFor(m => m.CLIE_NM_EMAIL, new { @class = "form-control", autofocus = true })
+                                </div>
+                                <div class="col-lg-3 col-md-3 col-xs-12">
+                                    Cidade
+                                    @Html.TextBoxFor(m => m.CLIE_NM_CIDADE, new { @class = "form-control", autofocus = true })
+                                </div>
+                                <div class="col-lg-2 col-md-2 col-xs-12">
+                                    UF
+                                    @Html.DropDownListFor(m => m.UF_CD_ID, (SelectList)ViewBag.UF, "Selecionar", new { @class = "form-control" })                            
+                                </div>
+                            </div>
+                            <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">
+                                <div class="col-lg-12 col-md-12 col-xs-12">
+                                    @Html.ButtonActionSubmit(text: "Filtrar")
+                                    @Html.ButtonLinkIndex(text: "Retirar Filtro", controller: "Cliente", action: "RetirarFiltroCliente")
+                                    @Html.ButtonLinkIndex(text: "Exibir Todos", controller: "Cliente", action: "MostrarTudoCliente")
+                                    @if (ViewBag.Perfil == "ADM" || ViewBag.PERFIL == "GER")
+                                    {
+                                        @Html.ButtonLinkIndex(text: "Novo Cliente", controller: "Cliente", action: "IncluirCliente")
+                                        @*@Html.ButtonLinkIndex(text: "Novo Cliente - Planilha", controller: "Cliente", action: "IncluirClienteExcel")*@
+                                        @Html.ButtonLinkIndex(text: "Ver Inativos", controller: "Cliente", action: "VerClientesInativos")
+                                    }
+                                    @Html.ButtonLinkIndex(text: "Exibir Lista de Clientes", controller: "Cliente", action: "MontarTelaCliente")
+                                </div>
+                            </div>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-xs-12 ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>Clientes</h5>
+                    <div class="ibox-tools">
+                        <a class="collapse-link">
+                            <i class="fa fa-chevron-up"></i>
+                        </a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            <i class="fa fa-wrench"></i>
+                        </a>
+                        <ul class="dropdown-menu dropdown-user">
+                            <li>
+                                <a href="#">Config option 1</a>
+                            </li>
+                            <li>
+                                <a href="#">Config option 2</a>
+                            </li>
+                        </ul>
+                        <a class="close-link">
+                            <i class="fa fa-times"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="ibox-content">
+                    @if (!ViewData.ModelState.IsValid)
+                    {
+                        <div class="alert alert-danger">
+                            <button type="button" class="close" data-dismiss="alert">Fechar</button>
+                            @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+                        </div>
+                    }
+                    <div class="row">
+                            @if ((ViewBag.Listas as List<EntitiesServices.Model.CLIENTE>).Count > 0)
+                            {
+                                foreach (var cond in (ViewBag.Listas as List<EntitiesServices.Model.CLIENTE>))
+                                {
+                                    <div class="col-lg-4">
+                                        <div class="contact-box" style="height: 300px;">
+                                            <a href="@Url.Action("EditarCliente", "Cliente", new { id = cond.CLIE_CD_ID })">
+                                                <div class="col-sm-4">
+                                                    @if (!String.IsNullOrEmpty(cond.CLIE_AQ_FOTO))
+                                                    {
+                                                        <div class="text-center">
+                                                            <img alt="image" class="img-circle m-t-xs img-responsive" src="@Url.Content(cond.CLIE_AQ_FOTO)">
+                                                        </div>
+                                                    }
+                                                    else
+                                                    {
+                                                        <div class="text-center">
+                                                            <img src="~/Imagens/Base/icone_imagem.jpg" style="width: auto; height: auto; max-height: 55px; max-width: 45px;">
+                                                        </div>
+                                                    }
+                                                </div>
+                                                <div class="col-sm-8">
+                                                    <h3><strong>@cond.CLIE_NM_NOME</strong></h3>
+                                                    <p><i class="fa fa-map-marker"></i> @cond.CLIE_NM_EMAIL</p>
+                                                    <address>
+                                                        <strong>@cond.CLIE_NM_RAZAO</strong><br>
+                                                        @cond.CLIE_NM_ENDERECO<br>
+                                                        @cond.CLIE_NR_NUMERO<br />
+                                                        @cond.CLIE_NM_COMPLEMENTO<br />
+                                                        @cond.CLIE_NM_BAIRRO @cond.CLIE_NM_CIDADE @cond.CLIE_SG_UF<br>
+                                                        @cond.CLIE_NR_CEP<br>
+                                                        <abbr title="Phone">P:</abbr> @cond.CLIE_NR_TELEFONES
+                                                    </address>
+                                                </div>
+                                                <div class="clearfix"></div>
+                                            </a>
+                                        </div>
+                                    </div>
+                                }   
+                            }
+                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Styles {
+    <link href="~/Content/themes/base/all.css" rel="stylesheet" />  
+    @Styles.Render("~/Content/plugins/dataTables/dataTablesStyles")
+    @Styles.Render("~/plugins/jasnyBootstrapStyles")
 }
 
-<h2>VerCardsCliente</h2>
+@section Scripts {
+
+    @Scripts.Render("~/plugins/dataTables")
+    @Scripts.Render("~/bundles/inputmask")
+    @Scripts.Render("~/plugins/jasnyBootstrap")
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.js"></script>
+    
+   
+    <script type="text/javascript">
+        $(function () {
+            $("#cpf").mask("999.999.999-99");
+            $("#cnpj").mask("99.999.999/9999-99");
+        });
+    </script>
+}
+
+@if (ViewBag.Message != null)
+{
+    <script type="text/javascript">
+            window.onload = function () {
+                alert("@ViewBag.Message");
+            };
+    </script>
+}
 
