--- a/SMS_Presentation/Views/Cliente/VerClientesInativos.cshtml
+++ b/SMS_Presentation/Views/Cliente/VerClientesInativos.cshtml
@@ -1,7 +1,224 @@
-﻿
-@{
-    ViewBag.Title = "VerClientesInativos";
+﻿@using Presentation.Extensions
+@using CrossCutting;
+@using EntitiesServices.Work_Classes;
+@model EntitiesServices.Model.CLIENTE
+@{ Layout = "~/Views/Shared/_Layout_Admin.cshtml"; }
+<div class="wrapper wrapper-content animated fadeInRight">
+    <div class="page-title">
+        <h3 class="title">Clientes</h3>
+        <br />
+        <ol class="breadcrumb">
+            <li>
+                <a href="@Url.Action("CarregarBase", "BaseAdmin")">Dashboard</a>
+            </li>
+            <li>
+                <a href="@Url.Action("MontarTelaCliente", "Cliente")">Clientes</a>
+            </li>
+            <li class="active">
+                <strong>Clientes Inativos</strong>
+            </li>
+        </ol>
+        <br />
+    </div>
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-xs-12 ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>Filtros</h5>
+                    <div class="ibox-tools">
+                        <a class="collapse-link">
+                            <i class="fa fa-chevron-up"></i>
+                        </a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            <i class="fa fa-wrench"></i>
+                        </a>
+                        <ul class="dropdown-menu dropdown-user">
+                            <li>
+                                <a href="#">Config option 1</a>
+                            </li>
+                            <li>
+                                <a href="#">Config option 2</a>
+                            </li>
+                        </ul>
+                        <a class="close-link">
+                            <i class="fa fa-times"></i>
+                        </a>
+                    </div>
+                </div>
+
+                @using (Html.BeginForm("FiltrarInativos", "Cliente", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal" }))
+                {
+    <div class="ibox-content">
+        <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">
+            <div class="col-lg-3 col-md-3 col-xs-12">
+                Nome
+                @Html.TextBoxFor(m => m.CLIE_NM_NOME, new { @class = "form-control", autofocus = true })
+            </div>
+            <div class="col-lg-3 col-md-3 col-xs-12">
+                Cidade
+                @Html.TextBoxFor(m => m.CLIE_NM_CIDADE, new { @class = "form-control", autofocus = true })
+            </div>
+            <div class="col-lg-2 col-md-2 col-xs-12">
+                UF
+                @Html.DropDownListFor(m => m.UF_CD_ID, (SelectList)ViewBag.UF, "Selecionar", new { @class = "form-control" })
+            </div>
+        </div>
+        <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">
+            <div class="col-lg-12 col-md-12 col-xs-12">
+                @Html.ButtonActionSubmit(text: "Filtrar")
+                @Html.ButtonLinkIndex(text: "Retirar Filtro", controller: "Cliente", action: "RetirarFiltroInativos")
+                @Html.ButtonLinkIndex(text: "Voltar", controller: "Cliente", action: "MontarTelaCliente")
+            </div>
+        </div>
+    </div>}
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-xs-12 ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>Clientes Inativos</h5>
+                    <div class="ibox-tools">
+                        <a class="collapse-link">
+                            <i class="fa fa-chevron-up"></i>
+                        </a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            <i class="fa fa-wrench"></i>
+                        </a>
+                        <ul class="dropdown-menu dropdown-user">
+                            <li>
+                                <a href="#">Config option 1</a>
+                            </li>
+                            <li>
+                                <a href="#">Config option 2</a>
+                            </li>
+                        </ul>
+                        <a class="close-link">
+                            <i class="fa fa-times"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="ibox-content">
+                    @if (!ViewData.ModelState.IsValid)
+                    {
+        <div class="alert alert-danger">
+            <button type="button" class="close" data-dismiss="alert">Fechar</button>
+            @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+        </div>}
+                    <div class="row">
+                        @if ((ViewBag.Listas as List<EntitiesServices.Model.CLIENTE>).Count > 0)
+                        {
+            <table class="table table-striped table-bordered table-hover dataTables-example">
+                <thead style="background-color:lightsteelblue">
+                    <tr>
+                        <th>Categoria</th>
+                        <th>Nome</th>
+                        <th>CPF</th>
+                        <th>CNPJ</th>
+                        <th>E-Mail</th>
+                        <th>Telefone</th>
+                        <th>Cidade</th>
+                        <th>UF</th>
+                        <th></th>
+                        <th class="td-one-action">Ações</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var cond in (ViewBag.Listas as List<EntitiesServices.Model.CLIENTE>))
+                    {
+    <tr>
+        <td>@cond.CATEGORIA_CLIENTE.CACL_NM_NOME</td>
+        <td>@cond.CLIE_NM_NOME</td>
+        <td>@cond.CLIE_NR_CPF</td>
+        <td>@cond.CLIE_NR_CNPJ</td>
+        <td>@cond.CLIE_NM_EMAIL</td>
+        <td>@cond.CLIE_NR_TELEFONES</td>
+        <td>@cond.CLIE_NM_CIDADE</td>
+        @if (cond.UF != null)
+        {
+<td>@cond.UF.UF_SG_SIGLA</td> }
+                    else
+                    {
+<td>-</td>}
+        @if (!String.IsNullOrEmpty(cond.CLIE_AQ_FOTO))
+        {
+<td><img src="@Url.Content(cond.CLIE_AQ_FOTO)" style="width: auto; height: auto; max-height: 55px; max-width: 45px;"></td> }
+                    else
+                    {
+<td><img src="~/Images/a8.jpg" style="width: auto; height: auto; max-height: 55px; max-width: 45px;"></td>}
+        <td class="td-one-action">
+            @Html.TableLinkDetails(cond.CLIE_CD_ID, "EditarCliente", "fa-edit", "Editar/Consultar")
+        </td>
+    </tr>}
+                </tbody>
+            </table>}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Styles {
+    <link href="~/Content/themes/base/all.css" rel="stylesheet" />
+    @Styles.Render("~/Content/plugins/dataTables/dataTablesStyles")
+    @Styles.Render("~/plugins/jasnyBootstrapStyles")
 }
 
-<h2>VerClientesInativos</h2>
+@section Scripts {
+
+    @Scripts.Render("~/plugins/dataTables")
+    @Scripts.Render("~/bundles/inputmask")
+    @Scripts.Render("~/plugins/jasnyBootstrap")
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.js"></script>
+
+    @*<script type="text/javascript">
+        $(document).ready(function () {
+
+            $('.dataTables-example').DataTable({
+                pageLength: 25,
+                dom: '<"html5buttons"B>lTfgitp',
+                buttons: [
+                    { extend: 'copy' },
+                    { extend: 'csv' },
+                    { extend: 'excel', title: 'ExampleFile' },
+                    { extend: 'pdf', title: 'ExampleFile' },
+
+                    {
+                        extend: 'print',
+                        customize: function (win) {
+                            $(win.document.body).addClass('white-bg');
+                            $(win.document.body).css('font-size', '10px');
+
+                            $(win.document.body).find('table')
+                                .addClass('compact')
+                                .css('font-size', 'inherit');
+                        }
+                    }
+                ]
+
+            });
+
+
+
+        });
+
+    </script>*@
+    <script type="text/javascript">
+        $(function () {
+            $("#cpf").mask("999.999.999-99");
+            $("#cnpj").mask("99.999.999/9999-99");
+        });
+    </script>
+}
+
+@if (ViewBag.Message != null)
+{
+<script type="text/javascript">
+            window.onload = function () {
+                alert("@ViewBag.Message");
+            };
+</script>}
 
