--- a/SMS_Presentation/Views/Shared/_Navigation_Admin.cshtml
+++ b/SMS_Presentation/Views/Shared/_Navigation_Admin.cshtml
@@ -51,7 +51,7 @@
                         <ul class="nav nav-third-level collapse @Html.IsSelected(controller: "Cadastros", cssClass: "in")">
                             <li class="@Html.IsSelected(action: "MontarTelaCliente")"><a href="@Url.Action("MontarTelaCliente", "Cliente")">Clientes</a></li>
                             <li class="@Html.IsSelected(action: "MontarTelaFornecedor")"><a href="@Url.Action("MontarTelaFornecedor", "Fornecedor")">Fornecedores</a></li>
-                            <li class="@Html.IsSelected(action: "CarregarDesenvolvimento")"><a href="@Url.Action("CarregarDesenvolvimento", "BaseAdmin")">Produtos</a></li>
+                            <li class="@Html.IsSelected(action: "MontarTelaProduto")"><a href="@Url.Action("MontarTelaProduto", "Produto")">Produtos</a></li>
                             <li class="@Html.IsSelected(action: "MontarTelaTransportadora")"><a href="@Url.Action("MontarTelaTransportadora", "Transportadora")">Transportadoras</a></li>
                         </ul>
                     </li>
